# OrbitAgents

./: .gitignore  AGENT_OPTIMIZATION_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT_GUIDE.md  ENHANCEMENT.md  LAYOUT_IMPROVEMENTS.md  LICENSE  Makefile  OPTIMIZATION_COMPLETE.md  OPTIMIZEEAGENT.md  PROFESSIONAL_LAYOUT_COMPLETE.md  README.md  ROADMAP.md  SPACE_THEME_COMPLETE.md  SPACE_UI_COMPLETE.md  STATUS.md  TRANSFORMATION_COMPLETE.md  demo_live.py  demo_space_ui.py  deploy-production.sh  deployment_validation_report.json  docker-compose.free.yml  docker-compose.minimal.yml  e2e_test_report.json  final-integration.sh  integration_test_report_1752191800.json  integration_test_results.json  launch-fullstack.sh  launch-platform.sh  launch.sh  monitoring_dashboard.py  package-lock.json  package.json  production_validation_report.json  setup.sh  setup_ollama.sh  (+9 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: cloudflare_integration.py  enhanced_browser_agent.py  index.py  real_estate_scrapers.py  requirements.txt
charts/auth/: Chart.yaml  values.yaml
charts/auth/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  secret.yaml  service.yaml
charts/crawler/: Chart.yaml  values.yaml
charts/crawler/templates/: _helpers.tpl  deployment.yaml  secrets.yaml  service.yaml
charts/prometheus/: Chart.yaml  values.yaml
charts/prometheus/templates/: NOTES.txt
config/: free-tier-setup.md
docs/: MONITORING.md
frontend/: .eslintrc.json  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App-backup-1752218504.tsx  App-original.tsx  App-robust.tsx  App-space.tsx  App.tsx  index.css  test-setup.ts  vite-env.d.ts
frontend/src/__tests__/: App.test.tsx  search-pipeline.e2e.test.ts
frontend/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx  SimpleLandingPage.tsx
frontend/src/components/BrowserAutomation/: BrowserAutomationPanel.tsx
frontend/src/components/Layout/: ChatPanel.tsx  MapPanel.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx  SearchContext.tsx
frontend/src/hooks/: useSearch.ts
frontend/src/pages/: Login-backup.tsx  Login-old.tsx  Login.tsx
frontend/src/services/: auth.ts  search.ts
frontend/src/types/: auth.ts  search.ts
infra/: eks.tf  main.tf  outputs.tf  providers.tf  rds.tf  variables.tf
monitoring/: advanced_monitoring.py
scripts/: deploy-monitoring.sh  deploy_and_test.sh  deploy_vercel.sh  setup-cloudflare.sh  test_deployment.sh  test_deployment_new.sh  troubleshooting.sh
services/auth/: Dockerfile  EDGE_CASES.md  config.py  database.py  env.example  main.py  models.py  pyproject.toml  schemas.py  test.db
services/auth/tests/: conftest.py  test_auth.py  test_edge_cases.py  test_main.py
services/browser-agent/: Dockerfile  config.py  main.py  requirements.txt
services/crawler/: Dockerfile  config.py  database.py  main.py  mls_crawler.py  opensearch_client.py  pyproject.toml  requirements.txt  s3_manager.py  scheduler.py  schemas.py
services/query/: cache_manager.py  config.py  main.py  nlu_parser.py  opensearch_client.py  requirements.txt  schemas.py
services/query/tests/: __init__.py
tests/: comprehensive_e2e_tests.py  e2e_validation_suite.py  frontend_e2e_tests.py  minimal_validation.py  quick_integration_test.py  test_browser_agent_e2e.py
(+2 files in other folders)
